--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,24 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+--- 
+import Navbar from '../components/Navbar.astro'; /* Importa el componente Navbar */
+import Footer from '../components/Footer.astro'; /* Importa el componente Footer */
+import '../styles/global.css';
+---
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+<html>
+  <head>
+    <title>Mi Portafolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <header>
+      <Navbar/>
+    </header>
+    <main class="main-content">
+      <slot></slot>
+    </main>
+    <footer class="footer">
+      <Footer/>
+    </footer>
+  </body>
+</html>
