--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,14 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Contactame from '../components/Contactame.astro';
+import Inicio from '../components/Inicio.astro';
+import About from '../components/about.astro';
+import Proyectos from '../components/proyectos.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<section id="inicio" class="inicio"><Inicio/></section>
+	<section id="about" class="about"><About/></section>
+  	<section id="proyectos" class="proyectos"><Proyectos/></section>
+  	<section id="contactame" class="contactame"><Contactame/></section>
 </Layout>
