--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,6 +1,10 @@
+---
+const pathPerfil = `${Astro.base}profile.jpg`;
+---
+
 <div class="about-content">
     <div class="about-photo">
-      <img src={`${Astro.base}profile.jpg`} alt="Foto de perfil" />
+      <img src={pathPerfil} alt="Foto de perfil" />
     </div>
     <div class="about-text">
       <h2>Acerca de mí</h2>
