--- a/src/components/ProyectoCard.astro
+++ b/src/components/ProyectoCard.astro
@@ -6,6 +6,8 @@ const imagenConBase = `${Astro.base}${imagenUrl}`;
 <div class="proyecto">
   <img src={imagenConBase} alt={titulo} /> 
   <h3>{titulo}</h3>
+  <h3>{imagenUrl}</h3>
+  <h3>{imagenConBase}</h3>
   <p>{descripcion}</p>
   <a href={link} target="_blank">Ver más</a>
 </div>
