--- a/src/components/ProyectoCard.astro
+++ b/src/components/ProyectoCard.astro
@@ -1,13 +1,12 @@
 --- 
 const { titulo, descripcion, imagenUrl, link } = Astro.props;
 const imagenConBase = `${Astro.base}${imagenUrl}`;
-const base = Astro.base
 ---
 
 <div class="proyecto">
   <img src={imagenConBase} alt={titulo} /> 
   <h3>{titulo}</h3>
-  <h3>{base}</h3>
+  <h3>{Astro.base}</h3>
   <h3>{imagenUrl}</h3>
   <h3>{imagenConBase}</h3>
   <p>{descripcion}</p>
