--- a/src/components/ProyectoCard.astro
+++ b/src/components/ProyectoCard.astro
@@ -1,4 +1,5 @@
 --- 
+import {Astro} from 'astro'
 const { titulo, descripcion, imagenUrl, link } = Astro.props;
 const imagenConBase = `${Astro.base}${imagenUrl}`;
 ---
