--- a/src/components/ProyectoCard.astro
+++ b/src/components/ProyectoCard.astro
@@ -3,7 +3,7 @@ const { titulo, descripcion, imagenUrl, link } = Astro.props;
 ---
 
 <div class="proyecto">
-  <img src={imagenUrl} alt={titulo} /> 
+  <img src={`${Astro.base}${imagenUrl}`} alt={titulo} />
   <h3>{titulo}</h3>
   <p>{descripcion}</p>
   <a href={link} target="_blank">Ver más</a>
