--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,6 +1,6 @@
 <div class="about-content">
     <div class="about-photo">
-      <img src="/profile.jpg" alt="Foto de perfil" />
+      <img src="./profile.jpg" alt="Foto de perfil" />
     </div>
     <div class="about-text">
       <h2>Acerca de mí</h2>
