--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,11 +3,11 @@ import Navbar from '../components/Navbar.astro'; /* Importa el componente Navbar
 import Footer from '../components/Footer.astro'; /* Importa el componente Footer */
 import '../styles/global.css';
 ---
-
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Mi Portafolio</title>
     <meta charset="UTF-8" />
+    <title>Mi Portafolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
